[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/Noite.png" type="Texture" id=1]
[ext_resource path="res://scenes/Instanciaveis/personagem.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Fases/Fase1.gd" type="Script" id=3]
[ext_resource path="res://scenes/blocos/bloco_instavel.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Instanciaveis/plataforma.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/blocos/bloco_horizontal.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/blocos/bloco_vertical.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Instanciaveis/Hud.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Instanciaveis/coletavel.tscn" type="PackedScene" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 192, 64, 0, 64, 0, 0, 192, 0 )

[sub_resource type="TileSet" id=2]
0/name = "Noite.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 320, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Noite.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 384, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Noite.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 448, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Noite.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 512, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Noite.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 3 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "Noite.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 128, 0, 192, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 4 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0

[sub_resource type="TileSet" id=5]
0/name = "Noite.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=6]
0/name = "Noite.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 128, 89.25 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 80, 60.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 184, 130.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 110.5, 80.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 448.5, 58.25 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 92, 204.5 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 20, 260.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -196483, 0, 0, -196481, 0, 0, -196479, 0, 0, -196465, 0, 0, -196463, 0, 0, -130947, 4, 0, -130945, 4, 0, -130943, 4, 0, -130929, 4, 0, -130927, 4, 0, -65411, 4, 0, -65409, 4, 0, -65407, 4, 0, -65393, 4, 0, -65391, 4, 0, 125, 4, 0, 127, 4, 0, 129, 4, 0, 143, 4, 0, 145, 4, 0, 65661, 4, 0, 65663, 4, 0, 65665, 4, 0, 65679, 4, 0, 65681, 4, 0, 131197, 4, 0, 131199, 4, 0, 131201, 4, 0, 131215, 4, 0, 131217, 4, 0, 131278, 5, 0, 131284, 5, 0, 131290, 5, 0, 131296, 0, 0, 196681, 0, 0, 196733, 4, 0, 196735, 4, 0, 196737, 4, 0, 196751, 4, 0, 196753, 4, 0, 196814, 4, 0, 196816, 4, 0, 196818, 4, 0, 196820, 4, 0, 196822, 4, 0, 196824, 4, 0, 196826, 4, 0, 196828, 4, 0, 196830, 4, 0, 196832, 4, 0, 262269, 4, 0, 262271, 4, 0, 262273, 4, 0, 262287, 4, 0, 262289, 4, 0, 262350, 4, 0, 262352, 4, 0, 262354, 4, 0, 262356, 4, 0, 262358, 4, 0, 262360, 4, 0, 262362, 4, 0, 262364, 4, 0, 262366, 4, 0, 262368, 4, 0, 327751, 0, 0, 327805, 4, 0, 327807, 4, 0, 327809, 4, 0, 327823, 4, 0, 327825, 4, 0, 327886, 4, 0, 327888, 4, 0, 327890, 4, 0, 327892, 4, 0, 327894, 4, 0, 327896, 4, 0, 393341, 4, 0, 393343, 4, 0, 393345, 4, 0, 393359, 4, 0, 393361, 4, 0, 393422, 4, 0, 393424, 4, 0, 393426, 4, 0, 393428, 4, 0, 393430, 4, 0, 393432, 4, 0, 393434, 2, 0, 393436, 3, 0, 393438, 3, 0, 393440, 2, 0, 458821, 0, 0, 458877, 4, 0, 458879, 4, 0, 458881, 4, 0, 458895, 4, 0, 458897, 4, 0, 458958, 4, 0, 458960, 4, 0, 458962, 4, 0, 458964, 4, 0, 458966, 4, 0, 458968, 4, 0, 524413, 4, 0, 524415, 4, 0, 524417, 4, 0, 524431, 4, 0, 524433, 4, 0, 524494, 4, 0, 524496, 4, 0, 524498, 4, 0, 524500, 4, 0, 524502, 4, 0, 524504, 4, 0, 589848, 5, 0, 589854, 5, 0, 589865, 5, 0, 589871, 0, 0, 589873, 0, 0, 589885, 5, 0, 589891, 0, 0, 589949, 4, 0, 589951, 4, 0, 589953, 4, 0, 589967, 4, 0, 589969, 4, 0, 590030, 4, 0, 590032, 4, 0, 590034, 4, 0, 590036, 4, 0, 590038, 4, 0, 590040, 4, 0, 655384, 4, 0, 655386, 4, 0, 655387, 4, 0, 655388, 4, 0, 655390, 4, 0, 655392, 4, 0, 655394, 4, 0, 655401, 4, 0, 655403, 4, 0, 655405, 4, 0, 655407, 4, 0, 655409, 4, 0, 655485, 4, 0, 655487, 4, 0, 655489, 4, 0, 655503, 4, 0, 655505, 4, 0, 655566, 4, 0, 655568, 4, 0, 655570, 4, 0, 655572, 4, 0, 655574, 4, 0, 655576, 4, 0, 720896, 5, 0, 720902, 5, 0, 720908, 5, 0, 720914, 5, 0, 720920, 4, 0, 720922, 4, 0, 720924, 4, 0, 720926, 4, 0, 720928, 4, 0, 720930, 4, 0, 720937, 4, 0, 720939, 4, 0, 720941, 4, 0, 720943, 4, 0, 720945, 4, 0, 720971, 0, 0, 720973, 5, 0, 720979, 5, 0, 720985, 5, 0, 720991, 5, 0, 720997, 5, 0, 721003, 5, 0, 721009, 5, 0, 721015, 5, 0, 721021, 4, 0, 721023, 4, 0, 721025, 4, 0, 721039, 4, 0, 721041, 4, 0, 721050, 5, 0, 721056, 5, 0, 721062, 5, 0, 721068, 5, 0, 721102, 4, 0, 721104, 4, 0, 721106, 4, 0, 721108, 4, 0, 721110, 4, 0, 721112, 4, 0, 786432, 4, 0, 786434, 4, 0, 786436, 4, 0, 786438, 4, 0, 786440, 4, 0, 786442, 4, 0, 786444, 4, 0, 786446, 4, 0, 786448, 4, 0, 786450, 4, 0, 786452, 4, 0, 786454, 4, 0, 786456, 4, 0, 786458, 4, 0, 786460, 4, 0, 786462, 4, 0, 786464, 4, 0, 786466, 4, 0, 786473, 4, 0, 786475, 4, 0, 786477, 4, 0, 786479, 4, 0, 786481, 4, 0, 786507, 4, 0, 786509, 4, 0, 786511, 4, 0, 786513, 4, 0, 786515, 4, 0, 786517, 4, 0, 786519, 4, 0, 786521, 4, 0, 786523, 4, 0, 786525, 4, 0, 786527, 4, 0, 786529, 4, 0, 786531, 4, 0, 786533, 4, 0, 786535, 4, 0, 786537, 4, 0, 786539, 4, 0, 786541, 4, 0, 786543, 4, 0, 786545, 4, 0, 786547, 4, 0, 786549, 4, 0, 786551, 4, 0, 786553, 4, 0, 786555, 4, 0, 786557, 4, 0, 786559, 4, 0, 786561, 4, 0, 786575, 4, 0, 786577, 4, 0, 786586, 4, 0, 786588, 4, 0, 786590, 4, 0, 786592, 4, 0, 786594, 4, 0, 786596, 4, 0, 786598, 4, 0, 786600, 4, 0, 786602, 4, 0, 786604, 4, 0, 786606, 4, 0, 786608, 4, 0, 786638, 4, 0, 786640, 4, 0, 786642, 4, 0, 786644, 4, 0, 786646, 4, 0, 786648, 4, 0, 851968, 4, 0, 851970, 4, 0, 851972, 4, 0, 851974, 4, 0, 851976, 4, 0, 851978, 4, 0, 851980, 4, 0, 851982, 4, 0, 851984, 4, 0, 851986, 4, 0, 851988, 4, 0, 851990, 4, 0, 851992, 4, 0, 851994, 4, 0, 851996, 4, 0, 851998, 4, 0, 852000, 4, 0, 852002, 4, 0, 852009, 4, 0, 852011, 4, 0, 852013, 4, 0, 852015, 4, 0, 852017, 4, 0, 852041, 0, 0, 852043, 4, 0, 852045, 4, 0, 852047, 4, 0, 852049, 4, 0, 852051, 4, 0, 852053, 4, 0, 852055, 4, 0, 852057, 4, 0, 852059, 4, 0, 852061, 4, 0, 852063, 4, 0, 852065, 4, 0, 852067, 4, 0, 852069, 4, 0, 852071, 4, 0, 852073, 4, 0, 852075, 4, 0, 852077, 4, 0, 852079, 4, 0, 852081, 4, 0, 852083, 4, 0, 852085, 4, 0, 852087, 4, 0, 852089, 4, 0, 852091, 4, 0, 852093, 4, 0, 852095, 4, 0, 852097, 4, 0, 852105, 4, 0, 852107, 4, 0, 852109, 4, 0, 852111, 4, 0, 852113, 4, 0, 852122, 4, 0, 852124, 4, 0, 852126, 4, 0, 852128, 4, 0, 852130, 4, 0, 852132, 4, 0, 852134, 4, 0, 852136, 4, 0, 852138, 4, 0, 852140, 4, 0, 852142, 4, 0, 852144, 4, 0, 852174, 4, 0, 852176, 4, 0, 852178, 4, 0, 852180, 4, 0, 852182, 4, 0, 852184, 4, 0, 917534, 4, 0, 917536, 4, 0, 917538, 4, 0, 917545, 4, 0, 917547, 4, 0, 917549, 4, 0, 917551, 4, 0, 917553, 4, 0, 917577, 4, 0, 917579, 4, 0, 917581, 4, 0, 917583, 4, 0, 917585, 4, 0, 917587, 4, 0, 917589, 4, 0, 917591, 4, 0, 917593, 4, 0, 917595, 4, 0, 917597, 4, 0, 983040, 3, 0, 983042, 2, 0, 983044, 2, 0, 983046, 2, 0, 983048, 1, 0, 983050, 1, 0, 983052, 2, 0, 983054, 2, 0, 983056, 3, 0, 983058, 2, 0, 983060, 2, 0, 983062, 2, 0, 983064, 3, 0, 983066, 2, 0, 983068, 2, 0, 983070, 4, 0, 983072, 4, 0, 983074, 4, 0, 983076, 4, 0, 983078, 4, 0, 983079, 4, 0, 983081, 4, 0, 983083, 4, 0, 983085, 4, 0, 983087, 4, 0, 983089, 4, 0, 983111, 0, 0, 983113, 4, 0, 983115, 4, 0, 983117, 4, 0, 983119, 4, 0, 983121, 4, 0, 983123, 4, 0, 983125, 4, 0, 983127, 4, 0, 983129, 4, 0, 983131, 4, 0, 983133, 4, 0, 983135, 2, 0, 983137, 1, 0, 983139, 2, 0, 983141, 2, 0, 983143, 2, 0, 983145, 1, 0, 983147, 2, 0, 983149, 2, 0, 983151, 3, 0, 983153, 2, 0, 983155, 2, 0, 983157, 2, 0, 983159, 2, 0, 983161, 1, 0, 983163, 2, 0, 983165, 3, 0, 983167, 2, 0, 983169, 2, 0, 983171, 2, 0, 983173, 2, 0, 983175, 2, 0, 983177, 2, 0, 983179, 2, 0, 983181, 2, 0, 983183, 1, 0, 983185, 3, 0, 983194, 2, 0, 983196, 2, 0, 983198, 2, 0, 983200, 2, 0, 983202, 3, 0, 983204, 2, 0, 983206, 2, 0, 983208, 1, 0, 983210, 2, 0, 983212, 2, 0, 983214, 2, 0, 983216, 3, 0, 1048606, 4, 0, 1048608, 4, 0, 1048610, 4, 0, 1048612, 4, 0, 1048614, 4, 0, 1048615, 4, 0, 1048617, 4, 0, 1048619, 4, 0, 1048621, 4, 0, 1048623, 4, 0, 1048625, 4, 0, 1048647, 4, 0, 1048649, 4, 0, 1048651, 4, 0, 1048653, 4, 0, 1048655, 4, 0, 1048657, 4, 0, 1048659, 4, 0, 1048661, 4, 0, 1048663, 4, 0, 1048665, 4, 0, 1048667, 4, 0, 1114142, 4, 0, 1114144, 4, 0, 1114146, 4, 0, 1114148, 4, 0, 1114150, 4, 0, 1114151, 4, 0, 1114153, 4, 0, 1114155, 4, 0, 1114157, 4, 0, 1114159, 4, 0, 1114161, 4, 0, 1114181, 0, 0, 1114183, 4, 0, 1114185, 4, 0, 1114187, 4, 0, 1114189, 4, 0, 1114191, 4, 0, 1114193, 4, 0, 1114195, 4, 0, 1114197, 4, 0, 1114199, 4, 0, 1114201, 4, 0, 1114203, 4, 0, 1114205, 2, 0, 1179678, 4, 0, 1179680, 4, 0, 1179682, 4, 0, 1179684, 4, 0, 1179686, 4, 0, 1179687, 4, 0, 1179689, 4, 0, 1179691, 4, 0, 1179693, 4, 0, 1179695, 4, 0, 1179697, 4, 0, 1179717, 4, 0, 1179719, 4, 0, 1179721, 4, 0, 1179723, 4, 0, 1179725, 4, 0, 1179727, 4, 0, 1179729, 4, 0, 1179731, 4, 0, 1179733, 4, 0, 1179735, 4, 0, 1179737, 4, 0, 1245214, 4, 0, 1245216, 4, 0, 1245218, 4, 0, 1245220, 4, 0, 1245222, 4, 0, 1245223, 4, 0, 1245225, 4, 0, 1245227, 4, 0, 1245229, 4, 0, 1245231, 4, 0, 1245233, 4, 0, 1245235, 5, 0, 1245241, 5, 0, 1245247, 5, 0, 1245253, 4, 0, 1245255, 4, 0, 1245257, 4, 0, 1245259, 4, 0, 1245261, 4, 0, 1245263, 4, 0, 1245265, 4, 0, 1245267, 4, 0, 1245269, 4, 0, 1245271, 4, 0, 1245273, 4, 0, 1245275, 2, 0, 1310750, 4, 0, 1310752, 4, 0, 1310754, 4, 0, 1310756, 4, 0, 1310758, 4, 0, 1310759, 4, 0, 1310761, 4, 0, 1310763, 4, 0, 1310765, 4, 0, 1310767, 4, 0, 1310769, 4, 0, 1310771, 4, 0, 1310773, 4, 0, 1310775, 4, 0, 1310777, 4, 0, 1310779, 4, 0, 1310781, 4, 0, 1310783, 4, 0, 1310785, 4, 0, 1310787, 4, 0, 1310789, 4, 0, 1310791, 4, 0, 1310793, 4, 0, 1310795, 4, 0, 1310797, 4, 0, 1310799, 4, 0, 1310801, 4, 0, 1310803, 4, 0, 1310805, 4, 0, 1310807, 4, 0, 1376286, 4, 0, 1376288, 4, 0, 1376290, 4, 0, 1376292, 4, 0, 1376294, 4, 0, 1376295, 4, 0, 1376297, 4, 0, 1376299, 4, 0, 1376301, 4, 0, 1376303, 4, 0, 1376305, 4, 0, 1376307, 4, 0, 1376309, 4, 0, 1376311, 4, 0, 1376313, 4, 0, 1376315, 4, 0, 1376317, 4, 0, 1376319, 4, 0, 1376321, 4, 0, 1376323, 4, 0, 1376325, 4, 0, 1376327, 4, 0, 1376329, 4, 0, 1376331, 4, 0, 1376333, 4, 0, 1376335, 4, 0, 1376337, 4, 0, 1376339, 4, 0, 1376341, 4, 0, 1376343, 4, 0, 1376345, 2, 0, 1507357, 2, 0, 1507359, 2, 0, 1507361, 2, 0, 1507363, 2, 0, 1507365, 2, 0, 1507367, 1, 0, 1507369, 2, 0, 1507371, 2, 0, 1507373, 3, 0, 1507375, 2, 0, 1507377, 2, 0, 1507379, 3, 0, 1507381, 3, 0, 1507383, 2, 0, 1507385, 2, 0, 1507387, 2, 0, 1507389, 1, 0, 1507391, 2, 0, 1507393, 2, 0, 1507395, 2, 0, 1507397, 1, 0, 1507399, 1, 0, 1507401, 2, 0, 1507403, 2, 0, 1507405, 2, 0, 1507407, 3, 0, 1507409, 2, 0, 1507411, 2, 0, 1507413, 2, 0, 1507415, 2, 0 )

[node name="bloco_instavel3" parent="." instance=ExtResource( 4 )]
position = Vector2( 4408, -72 )
scale = Vector2( 3, 1 )

[node name="bloco_instavel2" parent="." instance=ExtResource( 4 )]
position = Vector2( 4216, -72 )
scale = Vector2( 3, 1 )

[node name="TileMap2" type="TileMap" parent="."]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 327753, 0, 0, 393289, 0, 0, 458823, 0, 0, 458825, 0, 0, 524359, 0, 0, 524361, 0, 0, 589875, 0, 0, 589877, 0, 0, 589879, 0, 0, 589881, 0, 0, 589883, 0, 0, 589893, 0, 0, 589895, 0, 0, 589897, 0, 0, 655411, 0, 0, 655413, 0, 0, 655415, 0, 0, 655417, 0, 0, 655419, 0, 0, 655429, 0, 0, 655431, 0, 0, 655433, 0, 0, 720947, 0, 0, 720949, 0, 0, 720951, 0, 0, 720953, 0, 0, 720955, 0, 0, 720957, 0, 0, 720959, 0, 0, 720961, 0, 0, 720963, 0, 0, 720965, 0, 0, 720967, 0, 0, 720969, 0, 0, 786483, 0, 0, 786485, 0, 0, 786487, 0, 0, 786489, 0, 0, 786491, 0, 0, 786493, 0, 0, 786495, 0, 0, 786497, 0, 0, 786499, 0, 0, 786501, 0, 0, 786503, 0, 0, 852019, 0, 0, 852021, 0, 0, 852023, 0, 0, 852025, 0, 0, 852027, 0, 0, 852029, 0, 0, 852031, 0, 0, 852033, 0, 0, 852035, 0, 0, 852037, 0, 0, 852039, 0, 0, 917555, 0, 0, 917557, 0, 0, 917559, 0, 0, 917561, 0, 0, 917563, 0, 0, 917565, 0, 0, 917567, 0, 0, 917569, 0, 0, 917571, 0, 0, 917573, 0, 0, 983091, 0, 0, 983093, 0, 0, 983095, 0, 0, 983097, 0, 0, 983099, 0, 0, 983101, 0, 0, 983103, 0, 0, 983105, 0, 0, 983107, 0, 0, 983109, 0, 0, 1048627, 0, 0, 1048629, 0, 0, 1048631, 0, 0, 1048633, 0, 0, 1048635, 0, 0, 1048637, 0, 0, 1048639, 0, 0, 1048641, 0, 0, 1048643, 0, 0, 1114163, 0, 0, 1114165, 0, 0, 1114167, 0, 0, 1114169, 0, 0, 1114171, 0, 0, 1114173, 0, 0, 1114175, 0, 0, 1114177, 0, 0, 1114179, 0, 0 )

[node name="bloco_instavel" parent="." instance=ExtResource( 4 )]
position = Vector2( 1840, 312 )
scale = Vector2( 2, 1 )

[node name="personagem" parent="." instance=ExtResource( 2 )]
position = Vector2( 304, 288 )

[node name="TileMap3" type="TileMap" parent="."]
tile_set = SubResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65405, 0, 0, -65403, 0, 0, -65401, 0, 0, -65399, 0, 0, -65397, 0, 0, -65395, 0, 0, 131, 0, 0, 133, 0, 0, 135, 0, 0, 137, 0, 0, 139, 0, 0, 141, 0, 0, 65667, 0, 0, 65669, 0, 0, 65671, 0, 0, 65673, 0, 0, 65675, 0, 0, 65677, 0, 0, 131203, 0, 0, 131205, 0, 0, 131207, 0, 0, 131209, 0, 0, 131211, 0, 0, 131213, 0, 0, 196739, 0, 0, 196741, 0, 0, 196743, 0, 0, 196745, 0, 0, 196747, 0, 0, 196749, 0, 0, 262275, 0, 0, 262277, 0, 0, 262279, 0, 0, 262281, 0, 0, 262283, 0, 0, 262285, 0, 0, 327811, 0, 0, 327813, 0, 0, 327815, 0, 0, 327817, 0, 0, 327819, 0, 0, 327821, 0, 0, 393347, 0, 0, 393349, 0, 0, 393351, 0, 0, 393353, 0, 0, 393355, 0, 0, 393357, 0, 0, 458883, 0, 0, 458885, 0, 0, 458887, 0, 0, 458889, 0, 0, 458891, 0, 0, 458893, 0, 0, 524419, 0, 0, 524421, 0, 0, 524423, 0, 0, 524425, 0, 0, 524427, 0, 0, 524429, 0, 0, 589955, 0, 0, 589957, 0, 0, 589959, 0, 0, 589961, 0, 0, 589963, 0, 0, 589965, 0, 0, 655491, 0, 0, 655493, 0, 0, 655495, 0, 0, 655497, 0, 0, 655499, 0, 0, 655501, 0, 0, 721027, 0, 0, 721029, 0, 0, 721031, 0, 0, 721033, 0, 0, 721035, 0, 0, 721037, 0, 0, 786563, 0, 0, 786565, 0, 0, 786567, 0, 0, 786569, 0, 0, 786571, 0, 0, 786573, 0, 0, 852099, 0, 0, 852101, 0, 0, 852103, 0, 0, 852105, 0, 0, 852107, 0, 0, 852109, 0, 0 )

[node name="plataforma7" parent="." instance=ExtResource( 5 )]
position = Vector2( 5312, 176 )
scale = Vector2( 8, 1 )

[node name="plataforma5" parent="." instance=ExtResource( 5 )]
position = Vector2( 5088, 0 )
scale = Vector2( 4, 1 )

[node name="plataforma6" parent="." instance=ExtResource( 5 )]
position = Vector2( 5520, 0 )
scale = Vector2( 4, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 3744.0
margin_top = -200.0
margin_right = 3776.0
margin_bottom = 352.0
color = Color( 0.407843, 0.294118, 0.0745098, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 3968.0
margin_top = -200.0
margin_right = 4000.0
margin_bottom = 352.0
color = Color( 0.407843, 0.294118, 0.0745098, 1 )

[node name="ColorRect5" type="ColorRect" parent="."]
margin_left = 5072.0
margin_top = -200.0
margin_right = 5104.0
margin_bottom = 352.0
color = Color( 0.407843, 0.294118, 0.0745098, 1 )

[node name="ColorRect6" type="ColorRect" parent="."]
margin_left = 5504.0
margin_top = -200.0
margin_right = 5536.0
margin_bottom = 352.0
color = Color( 0.407843, 0.294118, 0.0745098, 1 )

[node name="plataforma" parent="." instance=ExtResource( 5 )]
position = Vector2( 3936, 232 )
scale = Vector2( 2, 1 )

[node name="plataforma2" parent="." instance=ExtResource( 5 )]
position = Vector2( 3808, 104 )
scale = Vector2( 2, 1 )

[node name="plataforma3" parent="." instance=ExtResource( 5 )]
position = Vector2( 3936, -24 )
scale = Vector2( 2, 1 )

[node name="plataforma4" parent="." instance=ExtResource( 5 )]
position = Vector2( 3808, -153 )
scale = Vector2( 2, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 3624.0
margin_top = -381.0
margin_right = 3896.0
margin_bottom = -149.0
color = Color( 0.141176, 0.345098, 0.117647, 1 )

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 3848.0
margin_top = -382.0
margin_right = 4120.0
margin_bottom = -150.0
color = Color( 0.141176, 0.345098, 0.117647, 1 )

[node name="ColorRect7" type="ColorRect" parent="."]
margin_left = 4952.0
margin_top = -408.0
margin_right = 5224.0
margin_bottom = -176.0
color = Color( 0.141176, 0.345098, 0.117647, 1 )

[node name="ColorRect8" type="ColorRect" parent="."]
margin_left = 5384.0
margin_top = -408.0
margin_right = 5656.0
margin_bottom = -176.0
color = Color( 0.141176, 0.345098, 0.117647, 1 )

[node name="bloco_horizontal" parent="." instance=ExtResource( 6 )]
position = Vector2( 5696, 352 )

[node name="bloco_vertical1" parent="." instance=ExtResource( 7 )]
position = Vector2( 6272, 384 )
scale = Vector2( 2, 1 )

[node name="bloco_vertical2" parent="." instance=ExtResource( 7 )]
position = Vector2( 6400, 288 )
scale = Vector2( 2, 1 )

[node name="bloco_vertical3" parent="." instance=ExtResource( 7 )]
position = Vector2( 6528, 192 )
scale = Vector2( 2, 1 )

[node name="bloco_vertical4" parent="." instance=ExtResource( 7 )]
position = Vector2( 6400, 96 )
scale = Vector2( 2, 1 )

[node name="End" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="End"]
position = Vector2( 7104, -30.75 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Hud" parent="." instance=ExtResource( 8 )]

[node name="Death" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2( 1232, 411.5 )
shape = SubResource( 8 )

[node name="coletavel" parent="." instance=ExtResource( 9 )]
position = Vector2( 3936, -56 )

[node name="coletavel2" parent="." instance=ExtResource( 9 )]
position = Vector2( 2344, 64 )

[node name="coletavel4" parent="." instance=ExtResource( 9 )]
position = Vector2( 3936, 200 )

[node name="coletavel5" parent="." instance=ExtResource( 9 )]
position = Vector2( 3808, 72 )

[node name="coletavel3" parent="." instance=ExtResource( 9 )]
position = Vector2( 1360, 248 )

[node name="coletavel7" parent="." instance=ExtResource( 9 )]
position = Vector2( 4288, -128 )

[node name="coletavel8" parent="." instance=ExtResource( 9 )]
position = Vector2( 4480, -128 )

[node name="coletavel9" parent="." instance=ExtResource( 9 )]
position = Vector2( 4992, -40 )

[node name="coletavel10" parent="." instance=ExtResource( 9 )]
position = Vector2( 5408, 152 )

[node name="coletavel11" parent="." instance=ExtResource( 9 )]
position = Vector2( 5440, 112 )

[node name="coletavel12" parent="." instance=ExtResource( 9 )]
position = Vector2( 5472, 152 )

[node name="coletavel15" parent="." instance=ExtResource( 9 )]
position = Vector2( 3832, -184 )

[node name="coletavel16" parent="." instance=ExtResource( 9 )]
position = Vector2( 3808, -216 )

[node name="coletavel6" parent="." instance=ExtResource( 9 )]
position = Vector2( 3784, -184 )

[node name="coletavel13" parent="." instance=ExtResource( 9 )]
position = Vector2( 2392, 64 )

[node name="coletavel14" parent="." instance=ExtResource( 9 )]
position = Vector2( 2368, 24 )

[node name="coletavel17" parent="." instance=ExtResource( 9 )]
position = Vector2( 6216, 40 )

[node name="coletavel18" parent="." instance=ExtResource( 9 )]
position = Vector2( 6264, 40 )

[node name="coletavel19" parent="." instance=ExtResource( 9 )]
position = Vector2( 6240, 8 )

[node name="coletavel20" parent="." instance=ExtResource( 9 )]
position = Vector2( 5952, 280 )

[node name="Death2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death2"]
position = Vector2( 4384, 192 )
shape = SubResource( 9 )

[node name="Death3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death3"]
position = Vector2( 4817.5, 464.5 )
shape = SubResource( 10 )

[node name="Death4" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death4"]
position = Vector2( 6143.5, 482.25 )
shape = SubResource( 11 )

[node name="Check1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Check1"]
position = Vector2( 2580, 140.5 )
shape = SubResource( 12 )

[node name="Check2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Check2"]
position = Vector2( 5676, 84.5 )
shape = SubResource( 13 )

[connection signal="area_entered" from="End" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Death" to="." method="_on_Death_area_entered"]
[connection signal="area_shape_entered" from="Death2" to="." method="_on_Death2_area_shape_entered"]
[connection signal="area_shape_entered" from="Death3" to="." method="_on_Death3_area_shape_entered"]
[connection signal="area_shape_entered" from="Death4" to="." method="_on_Death4_area_shape_entered"]
[connection signal="area_shape_entered" from="Check1" to="." method="_on_Check1_area_shape_entered"]
[connection signal="area_shape_entered" from="Check2" to="." method="_on_Check2_area_shape_entered"]
